--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
     <title>Vite + React + TS</title>
   </head>
+  <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
